fixed z-index issue w/button

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ button {
     position: fixed;
     top:0;
     border-bottom: solid #0D346C;
+    z-index: 10000;
 
 
 }
